- Fixing contrast "error" on contact button.

--- a/style/index.css
+++ b/style/index.css
@@ -114,7 +114,7 @@ header {
 
 button {
   padding: 9px 25px;
-  background-color: rgba(14, 183, 205, 1);
+  background-color: rgb(0, 138, 192);
   border: none;
   border-radius: 50px;
   cursor: pointer;
